# liteboty

./: README.md  pyproject.toml
liteboty/: __init__.py
liteboty/cli/: commands.py
liteboty/cli/templates/project/: main.py
liteboty/cli/templates/project/config/: config.json
liteboty/cli/templates/project/services/hello/: service.py
liteboty/cli/templates/service/: service.py
liteboty/core/: __init__.py  bot.py  config.py  exceptions.py  message.py  process_service.py  registry.py  service.py  utils.py
liteboty/core/protos/: message.proto  message_pb2.py
liteboty/utils/: cv_convertors.py  datetime_utils.py  structure.py
