[tool.poetry]
name = "liteboty"
version = "0.1.0"
description = ""
authors = ["yejue <1145331931@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^5.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
click = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
liteboty = "liteboty.cli.commands:cli"
