[tool.poetry]
name = "liteboty"
version = "0.1.1b1"
description = "LiteBoty 是一个轻量级的机器人开发框架"
authors = ["yejue <1145331931@qq.com>"]
readme = "README.md"
homepage = "https://github.com/yejue/liteboty"
keywords = ["liteboty", "litebot", "ros", "bot"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^5.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
click = "^8.0.0"
watchdog = "^4.0.0"
opencv-python = "^4.10.0"
numpy = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
liteboty = "liteboty.cli.commands:cli"
